sign-in some  modal alignment issues fixed

--- a/src/components/sign-inModal/signInModal.css
+++ b/src/components/sign-inModal/signInModal.css
@@ -84,6 +84,8 @@
     display: flex;
     column-gap: 1.57rem;
     margin-top: 2.97rem;
+    justify-content: center;
+    align-items: center;
 }
 
 .google-logo-conatiner,
@@ -92,7 +94,7 @@
     justify-content: center;
     align-items: center;
     column-gap: 2rem;
-    width: 20.3rem;
+    width: 16.2rem;
     height: 5.2rem;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 1px solid #DCDBDD;
@@ -253,4 +255,9 @@
 .SignInModal-divider {
     margin-top: 2.5rem;
 }
+}
+@media(max-width:400px){
+    .SignInModal-otp-btn {
+        width: 95%;
+    }
 }
